5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1800_2565.log
== TEST (2019-06-12 14:48:01) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: "))           # Média Final	
P = array(eval(input("Presença: ")))              # Presença
CH = array(eavl(input("Carga horaria: ")))        # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (P >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (P >= 7,5 * CH):
		cont[1] = cont[1] + 1
	elif (P)
-- ERROR:
File "XXXX", line 5
    P = array(eval(input()))              # Presença
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:25) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: "))           # Média Final	
P = array(eval(input("Presenca: ")))              # Presença
CH = array(eavl(input("Carga horaria: ")))        # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (P >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (P < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
File "XXXX", line 5
    P = array(eval(input()))              # Presença
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:04) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: "))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eavl(input("Carga horaria: ")))        # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
File "XXXX", line 5
    PA = array(eval(input()))              # Presença
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:24) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: "))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))        # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
File "XXXX", line 5
    PA = array(eval(input()))              # Presença
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:46) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca ")))              # Presença
CH = array(eval(input("Carga horaria: ")))        # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:50) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca ")))               # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:06) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))               # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:10) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:51:13) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5,0) and (PA >= (0,75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- EXECUTION TIME:
1.51968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 11, in <module>
    if ((MF >= 5,0) and (PA >= (0,75 * CH))):
ValueError: operands could not be broadcast together with shapes (5,) (2,) 

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:54) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= (0.75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:56) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= (0.75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:13) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= (0.75 * CH))):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:56) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= (0.75 * CH))).all:
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:39) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Variável
freq = 0.75 * CH
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= freq):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
File "XXXX", line 13
    if ((MF >= 5.0) and (PA >= freq):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:48) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Variável
freq = 0.75 * CH
# Laço "For"
for i in range(size(MF)):
	if ((MF >= 5.0) and (PA >= freq)):
		cont[0] = cont[0] + 1
	elif (MF < 5,0):
		cont[1] = cont[1] + 1
	elif (PA < (0,75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:47) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Variável
freq = 0.75 * CH[i]
# Laço "For"
for i in range(size(MF)):
	if ((MF[i] >= 5.0) and (PA[i] >= freq)):
		cont[0] = cont[0] + 1
	elif (MF[i] < 5,0):
		cont[1] = cont[1] + 1
	elif (PA[i] < (0,75 * CH[i])):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:23) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if ((MF[i] >= 5.0) and (PA[i] >= 0.75 * CH[i])):
		cont[0] = cont[0] + 1
	elif (MF[i] < 5,0):
		cont[1] = cont[1] + 1
	elif (PA[i] < (0,75 * CH[i])):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:09) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA >= (0.75 * CH)):
		cont[0] = cont[0] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:56) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:12) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(1, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:08) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5):
		cont[0] = cont[0] + 1
		
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:31) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
		
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:49) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
	elif (MF[i] < 5):
		cont[1] = cont[1] + 1
	elif (PA[i] < (0.75 * CH):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
File "XXXX", line 15
    elif (PA[i] < (0.75 * CH):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:58) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
	elif (MF[i] < 5):
		cont[1] = cont[1] + 1
	elif (PA[i] < (0.75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:10:14) 
-- CODE:
# Módulo
from numpy import *
# Entrada
MF = array(eval(input("Media Final: ")))           # Média Final	
PA = array(eval(input("Presenca: ")))              # Presença
CH = array(eval(input("Carga horaria: ")))         # Carga Horária
# Contador do Vetor
cont = zeros(3, dtype=int)
# Laço "For"
for i in range(size(MF)):
	if (MF[i] >= 5) and (PA[i] >= (0.75 * CH)):
		cont[0] = cont[0] + 1
	elif (MF[i] < 5):
		cont[1] = cont[1] + 1
	elif (PA[i] < (0.75 * CH)):
		cont[2] = cont[2] + 1
# Saída
print(cont)
-- EXECUTION TIME:
1.17034
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
